# v8

./: BUILD.gn
build.ot/config/compiler/: BUILD.gn
build.ot/out.gn/x64/: args.gn
build.ot/out.gn/x64-debug/: args.gn
build.ot/out.gn/x86/: args.gn
build.ot/out.gn/x86-debug/: args.gn
